<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.caseclass.webservices.template</groupId>
  <artifactId>webservice-template-scala</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>

  <name>webservice-template-scala</name>
  <url>http://maven.apache.org</url>

  <properties>
    <maven.compiler.source>1.6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
    <encoding>UTF-8</encoding>
    <scala.version>2.10</scala.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <warname.version>v1</warname.version>
    <warname>${project.artifactId}#${warname.version}</warname>
    <hibernate-version>4.1.0.Final</hibernate-version>
    <contextname>${warname}</contextname>
    <project.scm.id>github.hc.ag</project.scm.id>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.6.2</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.6.2</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-entitymanager</artifactId>
      <version>${hibernate-version}</version>
    </dependency>

    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-c3p0</artifactId>
      <version>${hibernate-version}</version>
    </dependency>

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.18</version>
    </dependency>
    <dependency>
      <groupId>commons-dbcp</groupId>
      <artifactId>commons-dbcp</artifactId>
      <version>1.4</version>
    </dependency>
    <dependency>
      <groupId>org.lazyluke</groupId>
      <artifactId>log4jdbc-remix</artifactId>
      <version>0.2.7</version>
    </dependency>
    <dependency>
      <groupId>com.sun.jersey</groupId>
      <artifactId>jersey-client</artifactId>
      <version>1.9.1</version>
    </dependency>
    <dependency>
      <groupId>org.skife.com.typesafe.config</groupId>
      <artifactId>typesafe-config</artifactId>
      <version>0.3.0</version>
    </dependency>
    <dependency>
      <groupId>jboss</groupId>
      <artifactId>jbossall-client</artifactId>
      <version>4.2.2.GA</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>12.0</version>
    </dependency>

      <dependency>
          <groupId>com.fasterxml.jackson.module</groupId>
          <artifactId>jackson-module-scala_${scala.version}</artifactId>
          <version>2.2.1</version>
      </dependency>
      <dependency>
          <artifactId>jackson-core</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
          <version>2.2.1</version>
      </dependency>
      <dependency>
          <artifactId>jackson-annotations</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
          <version>2.2.1</version>
      </dependency>
      <dependency>
          <artifactId>jackson-databind</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
          <version>2.2.1</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.jaxrs</groupId>
          <artifactId>jackson-jaxrs-json-provider</artifactId>
          <version>2.0.5</version>
      </dependency>
      <dependency>
          <groupId>com.sun.jersey</groupId>
          <artifactId>jersey-server</artifactId>
          <version>1.9.1</version>
      </dependency>


    <!-- Test -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.specs2</groupId>
      <artifactId>specs2_${scala.version}</artifactId>
      <version>2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>

            <groupId>org.specs2</groupId>
            <artifactId>specs2-scalaz-core_${scala.version}</artifactId>
            <version>7.0.0</version>

      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>scala-tools-releases</id>
      <url>http://scala-tools.org/repo-releases/</url>
    </repository>
    <repository>
      <id>repo.codahale.com</id>
      <url>http://repo.codahale.com</url>
    </repository>
    <repository>
      <id>repo.typesafe.com</id>
      <url>http://repo.typesafe.com/typesafe/releases/</url>
    </repository>
  </repositories>


  <pluginRepositories>
    <pluginRepository>
      <id>scala-tools.org</id>
      <url>http://scala-tools.org/repo-releases</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <sourceDirectory>src/main/scala</sourceDirectory>
    <testSourceDirectory>src/test/scala</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.scala-tools</groupId>
        <artifactId>maven-scala-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <warName>${warname}</warName>
          <useCache>true</useCache>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.3</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.scm</groupId>
            <artifactId>maven-scm-provider-gitexe</artifactId>
            <version>1.7</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>com.google.code.maven-replacer-plugin</groupId>
        <artifactId>replacer</artifactId>
        <version>1.5.0</version>
        <configuration>
          <replacements>
            <replacement>
              <token>#ENV#</token>
              <value>dev</value>
            </replacement>
            <replacement>
              <token>#VERSION#</token>
              <value>${project.version}</value>
            </replacement>
            <replacement>
              <token>#LOGLEVEL#</token>
              <value>INFO</value>
            </replacement>
          </replacements>
        </configuration>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.scala-tools</groupId>
          <artifactId>maven-scala-plugin</artifactId>
          <version>2.15.2</version>
          <executions>
            <execution>
              <goals>
                <goal>compile</goal>
                <goal>testCompile</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.9</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.10</version>
          <configuration>
            <argLine>-Xms512m -Xmx1536m -XX:MaxPermSize=512m</argLine>
          </configuration>
          <executions>
            <execution>
              <id>integration-test</id>
              <goals>
                <goal>integration-test</goal>
              </goals>
            </execution>
            <execution>
              <id>verify</id>
              <goals>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.3.2</version>
          <configuration>
            <source>1.6</source>
            <target>1.6</target>
            <encoding>${project.build.sourceEncoding}</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>2.0.1</version>

          <executions>
            <execution>
              <id>prepare-war</id>
              <phase>prepare-package</phase>
              <configuration>
                <useCache>true</useCache>
              </configuration>
              <goals>
                <goal>exploded</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.googlecode.t7mp</groupId>
          <artifactId>maven-t7-plugin</artifactId>
          <version>0.9.9</version>
        </plugin>
        <plugin>
          <groupId>com.google.code.maven-replacer-plugin</groupId>
          <artifactId>replacer</artifactId>
          <version>1.5.0</version>
          <executions>
            <execution>
              <id>setEnv</id>
              <phase>process-resources</phase>
              <configuration>
                <file>target/classes/application.conf</file>
              </configuration>
              <goals>
                <goal>replace</goal>
              </goals>
            </execution>
            <execution>
              <id>setLogLevel</id>
              <phase>process-resources</phase>
              <configuration>
                <file>target/classes/log4j.properties</file>
              </configuration>
              <goals>
                <goal>replace</goal>
              </goals>
            </execution>
            <execution>
              <id>setVersion</id>
              <phase>prepare-package</phase>
              <configuration>
                <file>
                  target/${project.artifactId}-${project.version}/WEB-INF/web.xml
                </file>
              </configuration>
              <goals>
                <goal>replace</goal>
              </goals>
            </execution>
          </executions>

        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.5</version>
        </plugin>
      </plugins>


    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>integration-tests</id>
      <dependencies>
        <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>1.3.168</version>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>com.google.code.maven-replacer-plugin</groupId>
            <artifactId>replacer</artifactId>
            <version>1.5.0</version>
            <configuration>
              <replacements>
                <replacement>
                  <token>#ENV#</token>
                  <value>integration-tests</value>
                </replacement>
                <replacement>
                  <token>#VERSION#</token>
                  <value>${project.version}</value>
                </replacement>
                <replacement>
                  <token>#LOGLEVEL#</token>
                  <value>INFO</value>
                </replacement>
              </replacements>
            </configuration>
          </plugin>
          <plugin>
            <groupId>com.googlecode.t7mp</groupId>
            <artifactId>maven-t7-plugin</artifactId>
            <version>0.9.8</version>
            <configuration>
              <tomcatConfigDirectory>${project.build.directory}/test-classes/tomcatconf
              </tomcatConfigDirectory>
              <tomcatSetAwait>false</tomcatSetAwait>
              <tomcatHttpPort>8088</tomcatHttpPort>
              <tomcatShutdownPort>8093</tomcatShutdownPort>


              <contextPath>${contextname}</contextPath>
                <!-- configure additional services -->
                <!-- webapps>
                  <webappArtifact>
                    <groupId></groupId>
                    <artifactId></artifactId>
                    <version></version>
                  </webappArtifact>
                </webapps -->
            </configuration>
            <executions>
              <execution>
                <id>start-tomcat</id>
                <goals>
                  <goal>run-forked</goal>
                </goals>
                <phase>pre-integration-test</phase>

              </execution>
              <execution>
                <id>tomcat-stop</id>
                <goals>
                  <goal>stop-forked</goal>
                </goals>
                <phase>post-integration-test</phase>
              </execution>
            </executions>

          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>2.5</version>
            <executions>
              <execution>
                <id>copy-sqlinitial</id>
                <!-- here the phase you need -->
                <phase>process-resources</phase>
                <goals>
                  <goal>copy-resources</goal>
                </goals>
                <configuration>
                  <outputDirectory>${basedir}/target/classes</outputDirectory>
                  <resources>
                    <resource>
                      <directory>src/test/resources</directory>
                      <filtering>true</filtering>
                      <includes>
                        <include>**/*.sql</include>
                      </includes>
                    </resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <configuration>
              <warSourceDirectory>src/test/webapp</warSourceDirectory>
            </configuration>
          </plugin>
        </plugins>
      </build>

    </profile>
  </profiles>

</project>
